<resources>
    <string name="app_name">Shopping Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_text">В списке пока нет машин.</string>
    <string name="try_again_later">Попробуйте пожалуйста позже</string>
    <string name="favorite_list_empty">Список желаемых пуст</string>
    <string name="favorite_list">Список желаемых</string>
    <string name="clear_list">Очистить список</string>
    <string name="text_view_price">$149.99/ day</string>
    <string name="text_view_cars_name">Audi A6 with:\n 4 seats | 4 doors</string>
    <string name="text_view_snowflake">Air Conditioning</string>
    <string name="text_view_manual">Manual</string>
    <string name="text_view_shuttle_bus">Shuttle Bus</string>
    <string name="text_view_full_to_full">Full to Full</string>
    <string name="button_favorite">Add to Favorite</string>
    <string name="buton_cart">Check cart</string>
    <string name="text_view_app_name">Let\'s rent!</string>
    <string name="text_view_welcome">Welcome</string>
    <string name="text_view_enter_email">Please enter your email</string>
    <string name="edit_text_hint_email">Email</string>
    <string name="button_enter">Enter</string>
    <string name="button_register">Register</string>
    <string name="sort_by">Сортировать по</string>
    <string name="high_to_low">По убыванию</string>
    <string name="low_to_high">По возрастанию</string>
    <string name="check_rent_label">Check Rent</string>
    <string name="search">Search</string>
    <string name="time_remaining_until_travel">Your trip starts in: </string>
    <string name="save_your_money_book_now">Save your money, book now!</string>
</resources>