<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_image"
    tools:context=".activity.HelloActivity">

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_view_app_name"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/corner_layout_line"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_view_welcome"
                android:layout_marginTop="5dp"
                android:textColor="#363A43"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="-15dp"
                android:text="@string/text_view_enter_email"
                android:textColor="#979CA6"
                android:textSize="13sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_email"
                    android:textColorHint="#CDDC39"
                    android:layout_margin="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/helloActivityBtnEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/button_enter"
                android:textColor="#000"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/helloActivityBtnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/button_register"
                android:textColor="#000"
                android:textStyle="bold"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>