<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/fragmentCheckRentImage"
        android:layout_width="250dp"
        android:layout_height="128dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/fragmentCheckRentImage"
        android:orientation="vertical"
        android:weightSum="2">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#707070" />
        <LinearLayout
            android:id="@+id/fragmentCheckRentImagesLayout"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_below="@id/fragmentCheckRentImage"
            android:orientation="horizontal"

            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/ic_snowflake_30475e"
                    />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/ic_baseline_car_30475e"
                    />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/ic_passangers"
                    />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/ic_gas_station_30475e"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_below="@id/fragmentCheckRentImagesLayout"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/fragmentCheckRentTViewSnowflake"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="-8dp"
                android:gravity="center"
                android:text="@string/text_view_snowflake"
                android:textColor="#30475e"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/fragmentCheckRentTViewManual"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="-8dp"
                android:text="@string/text_view_manual"
                android:textColor="#30475e"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/fragmentCheckRentTViewPassengers"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="-8dp"
                android:text="@string/text_view_passengers"
                android:textColor="#30475e"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/fragmentCheckRentTViewGas"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="-8dp"
                android:text="@string/text_view_full_to_full"
                android:textColor="#30475e"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>